<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/birumantap"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/judulnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:text="@string/inputname"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"/>

<com.google.android.material.textfield.TextInputEditText
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="3dp"
    android:background="@drawable/border"
    android:drawablePadding="10dp"
    android:id="@+id/nama"
    android:padding="10dp"
    android:layout_marginStart="13dp"
    android:layout_marginEnd="15dp"
    android:hint="@string/name"
    android:fontFamily="@font/poppins_semibold"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/judulnama"
    app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/judulkartu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nama"
        android:text="@string/headerGC"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border"
        android:drawablePadding="10dp"
        android:id="@+id/greetcard"
        android:padding="10dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/greetcard"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/judulkartu"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/birumantap"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>