<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbkg"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="25dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/login"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/birumantap"
                android:fontFamily="@font/poppins_semibold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtUsername"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="45dp"
                android:padding="10dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassword"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:drawablePadding="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="17sp"
                android:backgroundTint="@color/birumantap"
                android:id="@+id/btnLogin"
                android:layout_marginTop="60dp"
                android:padding="15dp"
                android:textAlignment="center"
                app:cornerRadius="20dp"/>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>


</LinearLayout>